<resources>
    <string name="app_name">Lab04</string>
    <string name="greeting1">Top Left</string>
    <string name="greeting2">Top Right</string>
    <string name="greeting3">Bottom Left</string>
    <string name="greeting4">Bottom Right</string>
    <string name="greeting5">Hello there!</string>
    <string name="like_label">Like</string>
    <string name="accomplishment_label">Here\'s another label!</string>
    <string name="layout_label_2">Layout #2</string>
    <string name="layout_label_3">Layout #3</string>
    <string name="layout_label_4">Layout #4</string>
    <string name="layout_label_5">Layout #5</string>
    <string name="layout_label_6">Layout #6</string>
    <string name="layout_label_7">Layout #7</string>
    <string name="long_quotes"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Eget est lorem ipsum dolor. Tellus cras adipiscing enim eu turpis egestas pretium aenean. Et malesuada fames ac turpis egestas sed. Facilisi etiam dignissim diam quis. Velit dignissim sodales ut eu sem integer vitae justo. Posuere urna nec tincidunt praesent semper. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Cursus sit amet dictum sit amet justo donec. Potenti nullam ac tortor vitae purus. Consectetur purus ut faucibus pulvinar elementum integer. Nunc sed blandit libero volutpat. Dui vivamus arcu felis bibendum ut. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Nisl pretium fusce id velit ut tortor pretium. At varius vel pharetra vel turpis nunc eget lorem dolor. At elementum eu facilisis sed odio morbi. Ut pharetra sit amet aliquam id diam maecenas. Arcu dui vivamus arcu felis. Fusce ut placerat orci nulla. Est ante in nibh mauris cursus mattis. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam. Quis blandit turpis cursus in hac habitasse platea dictumst quisque. Mi tempus imperdiet nulla malesuada pellentesque elit eget. Convallis tellus id interdum velit. Suscipit tellus mauris a diam maecenas sed enim. Lorem mollis aliquam ut porttitor leo a diam. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis. Neque aliquam vestibulum morbi blandit cursus risus at ultrices mi. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Ornare lectus sit amet est placerat in egestas erat imperdiet. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Cursus metus aliquam eleifend mi in. Sit amet consectetur adipiscing elit ut aliquam purus sit amet. Pharetra et ultrices neque ornare aenean euismod. Tortor at risus viverra adipiscing at. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae. Mi ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Lorem ipsum dolor sit amet consectetur. Dui ut ornare lectus sit amet est placerat in. Velit laoreet id donec ultrices tincidunt arcu non sodales. Et netus et malesuada fames ac turpis egestas maecenas pharetra. Tempor id eu nisl nunc mi. Nulla at volutpat diam ut venenatis tellus. Cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo. Placerat duis ultricies lacus sed. Proin fermentum leo vel orci porta. Ut consequat semper viverra nam. Malesuada nunc vel risus commodo viverra maecenas accumsan lacus. Tristique et egestas quis ipsum suspendisse. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Pellentesque habitant morbi tristique senectus et. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Eget est lorem ipsum dolor. Tellus cras adipiscing enim eu turpis egestas pretium aenean. Et malesuada fames ac turpis egestas sed. Facilisi etiam dignissim diam quis. Velit dignissim sodales ut eu sem integer vitae justo. Posuere urna nec tincidunt praesent semper. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Cursus sit amet dictum sit amet justo donec. Potenti nullam ac tortor vitae purus. Consectetur purus ut faucibus pulvinar elementum integer. Nunc sed blandit libero volutpat. Dui vivamus arcu felis bibendum ut. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Nisl pretium fusce id velit ut tortor pretium. At varius vel pharetra vel turpis nunc eget lorem dolor. At elementum eu facilisis sed odio morbi. Ut pharetra sit amet aliquam id diam maecenas. Arcu dui vivamus arcu felis. Fusce ut placerat orci nulla. Est ante in nibh mauris cursus mattis. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam. Quis blandit turpis cursus in hac habitasse platea dictumst quisque. Mi tempus imperdiet nulla malesuada pellentesque elit eget. Convallis tellus id interdum velit. Suscipit tellus mauris a diam maecenas sed enim. Lorem mollis aliquam ut porttitor leo a diam. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis. Neque aliquam vestibulum morbi blandit cursus risus at ultrices mi. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Ornare lectus sit amet est placerat in egestas erat imperdiet. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Cursus metus aliquam eleifend mi in. Sit amet consectetur adipiscing elit ut aliquam purus sit amet. Pharetra et ultrices neque ornare aenean euismod. Tortor at risus viverra adipiscing at. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae. Mi ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Lorem ipsum dolor sit amet consectetur. Dui ut ornare lectus sit amet est placerat in. Velit laoreet id donec ultrices tincidunt arcu non sodales. Et netus et malesuada fames ac turpis egestas maecenas pharetra. Tempor id eu nisl nunc mi. Nulla at volutpat diam ut venenatis tellus. Cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo. Placerat duis ultricies lacus sed. Proin fermentum leo vel orci porta. Ut consequat semper viverra nam. Malesuada nunc vel risus commodo viverra maecenas accumsan lacus. Tristique et egestas quis ipsum suspendisse. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Pellentesque habitant morbi tristique senectus et. </string>
    <string name="layout_1">Layout #1</string>
</resources>